# Autonomous-Shopping-Assistant

./: README.md
src/: odom_to_path_node.py
src/front_tracking_interfaces/: CMakeLists.txt  package.xml
src/front_tracking_interfaces/msg/: PersonTrack.msg  PersonTrackArray.msg  PersonTrackPath.msg
src/front_tracking_node/: front_camera.py  package.xml  setup.cfg  setup.py
src/front_tracking_node/front_tracking_node/: front_camera.py
src/front_tracking_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/front_tracking_node/install/front_tracking_node/lib/front_tracking_node/: front_camera
src/front_tracking_node/install/front_tracking_node/share/front_tracking_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/front_tracking_node/install/front_tracking_node/share/front_tracking_node/launch/: front_camera.launch.py
src/front_tracking_node/launch/: front_camera.launch.py
src/front_tracking_node/log/: latest_build
src/launch/: full_system_launch.py
src/odom_to_path/: package.xml  setup.py
src/odom_to_path/odom_to_path/: odom_to_path_node.py
src/path_planning_node/: package.xml  setup.py
src/path_planning_node/path_planning_node/: path_planner_node.py
src/rear_tracking_interfaces/: CMakeLists.txt  package.xml
src/rear_tracking_node/: CMakeLists.txt  package.xml  rear_camera_backup  setup.cfg  setup.py
src/rear_tracking_node/launch/: rear_camera.launch.py
src/rear_tracking_node/msg/: UserPolar.msg
src/rear_tracking_node/rear_tracking_node/: rear_camera.py
src/slam_launch/: CMakeLists.txt  package.xml
src/slam_launch/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml
src/slam_launch/launch/: localization.launch.py  slam_online.launch.py  static_map.launch.py
src/user_follow_decision_node/: package.xml  setup.py
src/user_follow_decision_node/user_follow_decision_node/: user_decision_node.py
