<?xml version="1.0"?>
<package format="3">
  <name>odom_to_path</name>
  <version>0.0.0</version>
  <description>Convert Odometry to Path</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_type>ament_python</build_type>
</package>

