<package format="3">
  <name>user_follow_decision_node</name>
  <version>0.0.0</version>
  <description>User follow decision node</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

